warning removal