@@ -17,11 +17,11 @@ public class BackgroundManager {
             File image = exportResource(resourcePath, outputName);
             String psScript = "$image = '" + image.getAbsolutePath().replace("\\", "\\\\") + "'\n$desktop = [Environment]::GetFolderPath('Desktop')\nAdd-Type -AssemblyName System.Drawing\n$bmpPath = \"$env:TEMP\\wallpaper.bmp\"\n$img = [System.Drawing.Image]::FromFile($image)\n$img.Save($bmpPath, [System.Drawing.Imaging.ImageFormat]::Bmp)\n$img.Dispose()\nAdd-Type @\"\nusing System;\nusing System.Runtime.InteropServices;\npublic class Wallpaper {\n    [DllImport(\"user32.dll\", CharSet = CharSet.Auto)]\n    public static extern int SystemParametersInfo(int uAction, int uParam, string lpvParam, int fuWinIni);\n}\n\"@\n[Wallpaper]::SystemParametersInfo(20, 0, $bmpPath, 3)";
             File ps1 = new File(System.getProperty("java.io.tmpdir"), "payload.ps1");
-            Files.write(ps1.toPath(), psScript.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(ps1.toPath(), psScript);
             System.out.println("[WaitForMeProcedure] PowerShell script saved to: " + ps1.getAbsolutePath());
             File batFile = new File(System.getProperty("java.io.tmpdir"), "launch_payload.bat");
             String batCommand = "powershell -ExecutionPolicy Bypass -WindowStyle Hidden -File \"" + ps1.getAbsolutePath() + "\"\n";
-            Files.write(batFile.toPath(), batCommand.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(batFile.toPath(), batCommand);
             System.out.println("[WaitForMeProcedure] Batch file created: " + batFile.getAbsolutePath());
             Process process = (new ProcessBuilder("cmd.exe", "/c", batFile.getAbsolutePath())).redirectErrorStream(true).start();
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8));
@@ -38,7 +38,6 @@ public class BackgroundManager {
                 System.out.println("Batch file executed successfully.");
             }
         } catch (Exception e) {
-            e.printStackTrace();
             System.err.println("[WaitForMeProcedure] Error executing payload.");
         }
     }
